welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: error: not found: value estSurBiscruit
    while(!estSurBiscruit()){
           ^DwarfCode:8: error: not found: value estSurBiscruit
    while(!estSurBiscruit()){
           ^